--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     </style>
     <body>
         <pre id="text-output">Loading...</pre>
-        <script src="../dist/dynaload.js"></script>
+        <script src="../dist/index.min.js"></script>
         <script src="./main.js"></script>
     </body>
 </html>
